; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_prtfile.c_WriteFloat.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_prtfile.c_WriteFloat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%i \00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%f \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @WriteFloat(i32* %0, double %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca double, align 8
  store i32* %0, i32** %3, align 8
  store double %1, double* %4, align 8
  %5 = load double, double* %4, align 8
  %6 = load double, double* %4, align 8
  %7 = call i64 @Q_rint(double %6)
  %8 = sitofp i64 %7 to double
  %9 = fsub double %5, %8
  %10 = fptosi double %9 to i64
  %11 = call double @fabs(i64 %10)
  %12 = fcmp olt double %11, 1.000000e-03
  br i1 %12, label %13, label %20

13:                                               ; preds = %2
  %14 = load i32*, i32** %3, align 8
  %15 = load double, double* %4, align 8
  %16 = call i64 @Q_rint(double %15)
  %17 = trunc i64 %16 to i32
  %18 = sitofp i32 %17 to double
  %19 = call i32 @fprintf(i32* %14, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), double %18)
  br label %24

20:                                               ; preds = %2
  %21 = load i32*, i32** %3, align 8
  %22 = load double, double* %4, align 8
  %23 = call i32 @fprintf(i32* %21, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), double %22)
  br label %24

24:                                               ; preds = %20, %13
  ret void
}

declare dso_local double @fabs(i64) #1

declare dso_local i64 @Q_rint(double) #1

declare dso_local i32 @fprintf(i32*, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
